# VeySicK

./: .gitignore  AntiRE.h  CMakeLists.txt  HISTORY.txt  HowToBuild.txt  LICENSE.txt  MImageView.h  MImageViewEx.h  README.md  README.txt  VeySicK.cpp  VeySicK.h  VeySicK_res.rc  Win.cpp  ast.h  build-on-rosbe.bat  cmd_turtle.cpp  cmd_turtle.h  com_speed.h  config.h  coreapi.cpp  coreapi.h  draw.cpp  draw.h  draw98.cpp  draw98.h  draw_algorithm.h  eat.h  encoding.cpp  encoding.h  errors.h  insn.h  installer.iss  keywords.h  lexer.cpp  lexer.h  lexer.ll  mdbg.cpp  mdbg.h  mem.cpp  (+18 more)
cmake-tests/: cosf.cpp  sinf.cpp
doc/: README.txt  keywords.h  keywords.txt  make_doc.bat  veysick-mate-manual.md
doc-ja/: .gitignore  README.txt  make_doc.bat  veysick-maten-manual-ja.md  veysick-maten-manual.md
drive0/: 00README.txt
drive1/: 00README.txt  @load.v1  @load.v2  ABS.BAS  AKCNV_.BAS  ASC.BAS  ASC2.BAS  ATN.BAS  ATN2.BAS  ATTR_.BAS  BEEP.BAS  BEEP2.BAS  BLOAD98.BAS  BSAVE98.BAS  CALL.BAS  CDBL.BAS  CHAIN.BAS  CHAIN_MERGE.BAS  CHAIN_WRITE.BAS  CHR_.BAS  CHR_2.BAS  CINT.BAS  CINT2.BAS  CIRCLE.BAS  CIRCLE2.BAS  CIRCLE98.BAS  CLEAR.BAS  CLOSE.BAS  CLS.BAS  CMD_BGM.BAS  CMD_CLS.BAS  CMD_OUTM.BAS  CMD_PAL.BAS  CMD_PLAY.BAS  CMD_SING.BAS  CMD_SOUND.BAS  CMD_STOPM.BAS  CMD_TEXT.BAS  CMD_TURTLE.BAS  CMD_VOICE.BAS  (+186 more)
drive2/: 00README.txt  BINGO.TXT  BLOCK.BAS  BLOCK88.BAS  BUBBLE.BAS  DBLBUF98.BAS  DICE.BAS  DRAW.BAS  DRAW.TXT  FRACTAL98.BAS  GORIN.BAS  GORIN.TXT  IMGEDIT.BAS  IMGGET.BAS  IMGLOAD.BAS  INRYOKU.BAS  JANKEN.BAS  KUKU.BAS  MANDEL98.BAS  MAZE.BAS  NUMBER.BAS  SAISEI.BAS  SAISEI98.TXT  SHOOT.BAS  SHOOT.TXT  SLOT.BAS
drive3/: 00README.txt  S01.BAS  S02.BAS  S03.BAS  S04.BAS  S05.BAS  S06.BAS  S07.BAS  S08.BAS  S09.BAS  S10.BAS  S11.BAS  S12.BAS  S13.BAS  S14.BAS  S15.BAS  S16.BAS  S17.BAS  S18.BAS  S19.BAS  S20.BAS  S21.BAS  S22.BAS  S23.BAS  S24.BAS  S25.BAS  S26.BAS  S27.BAS  S28.BAS  S29.BAS  S30.BAS  S31.BAS  S32.BAS  S33.BAS  S34.BAS  S35.BAS  S39.BAS
drive4/: 00README.txt  ANK88.BAS  ANK98.BAS  BOX.BAS  CIRCLE.BAS  CIRCLE2.BAS  CIRCLE3.BAS  CSNG.BAS  FILEOP1.BAS  FILEOP2.BAS  KUKU.BAS  LINE.BAS  MAP.BAS  MOGURA.BAS  PAINT.BAS  PAINT2.BAS  PANK88.BAS  PANK98.BAS  POINT.BAS  PRINT.BAS  PRINT2.BAS  PRINT3.BAS  PSET.BAS  SEMIGRA98.BAS  SUB.BAS  SUB2.BAS  TOKEI.BAS  TRI.BAS  TRI2.BAS  TURTLE.BAS  TVRAM1-88.BAS  TVRAM2-88.BAS  TVRAM88.BAS  VAR.BAS  VIEW.BAS  WINDOW.BAS  a1.bas  a2.bas  a3.bas  a4.bas  (+6 more)
drive5/: 00README.txt  BINGO.BAS  C-DATA  MUSIC-C2.BAS  MUSIC-C2.TXT  MUSIC-C2.UTY  NAN.BAS  NAN.TXT  NGEN.BAS  NGEN.TXT  OTHELO.BAS  OTHELO.TXT  STARTREK.BAS  STARTREK.TXT  WORDTEST.BAS  WORDTEST.TXT
enc_temp_folder/566179fd4a1fdef2262112495cddbb4/: draw_algorithm.h
fmgon/: CMakeLists.txt  YM2203_Timbre.cpp  opna.cpp  pevent.h  posix_pevent.cpp  soundplayer.cpp  soundplayer.h  win32_pevent.h
fmgon/unboost/: array.hpp  assert.hpp  chrono.hpp  emplace.hpp  event.h  filesystem.hpp  foreach.hpp  forward_list.hpp  functional.hpp  ilist.hpp  initializer_list.hpp  pinttypes.h  pstdbool.h  random.hpp  ref.hpp  regex.hpp  safe_delete.hpp  snprintf.h  text2text.hpp  tuple.hpp  won.h
fmgon/unboost/algorithm/: string.hpp
fmgon/unboost/exception/: to_string.hpp
fmgon/unboost/filesystem/: operations.hpp
fmgon/unboost/math/: complex.hpp
fmgon/unboost/move/: core.hpp
fmgon/unboost/random/: random_device.hpp
fmgon/unboost/ratio/: ratio.hpp
fmgon/unboost/tuple/: tuple_io.hpp
fmgon/unboost/won/: kernel32.h  shell32.h  targetver.h  user32.h  won.h
img/: VeySicK.xpm  VeySicK_Mask.xbm  pc98_pank.xbm  semigra.xbm
lang/: en_US.rc  ja_JP.rc
tools/jisrom/: jisrom.cpp
